--- a/composer.json
+++ b/composer.json
@@ -8,5 +8,8 @@
     "minimum-stability": "stable",
     "extra": {
         "installer-name": "dashboard"
+    },
+    "config": {
+        "preferred-install": "dist"
     }
 }
